# claudtalk-coding-challenge

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/accounts/: forms.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: factories.py
apps/catalog/: admin.py  apps.py  forms.py  models.py  search.py  signals.py  urls.py  views.py
apps/catalog/management/commands/: seed_demo_data.py
apps/catalog/migrations/: 0001_initial.py
apps/catalog/tests/: factories.py  test_views.py
apps/reviews/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
apps/reviews/migrations/: 0001_initial.py
apps/reviews/tests/: factories.py  test_services.py  test_views.py
config/: urls.py
config/settings/: base.py  dev.py  test.py
templates/: base.html  home.html
templates/accounts/: login.html  signup.html
templates/catalog/: product_detail.html  product_list.html
templates/catalog/partials/: _product_grid.html
templates/reviews/: edit.html
templates/reviews/partials/: _rating_summary.html  _review_card.html  _review_card_edit.html  _review_form.html  _review_list.html  _review_page.html  _review_section.html
