[project]
name = "cloudtalk-reviews"
version = "0.1.0"
description = "Product review system built with Django + HTMX for the CloudTalk assignment."
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<5.2",
    "psycopg[binary]>=3.2",
    "django-environ>=0.11",
    "django-redis>=5.4",
    "django-htmx>=1.19",
    "gunicorn>=22",
]

[project.optional-dependencies]
dev = [
    "factory-boy>=3.3",
    "ruff>=0.9",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["config*", "apps*"]
